--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,8 +1,10 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
     </head>
+
     <body>
         <%- include('../includes/navigation.ejs') %>
+
             <main>
                 <% if (prods.length > 0) { %>
                     <div class="grid">
@@ -25,8 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product" class="btn">Edit</a>
+                                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input type="hidden" value="<%= product.id %>" name="productId">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
                                 </div>
