--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,30 +1,50 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/auth.css">
+<link rel="stylesheet" href="/css/forms.css">
+<link rel="stylesheet" href="/css/auth.css">
 </head>
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-
-    <main>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
-        <form class="login-form" action="/signup" method="POST">
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password">
-            </div>
-            <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
-            </div>
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Signup</button>
-        </form>
-    </main>
+   <main>
+    <% if(validationErrors && validationErrors.length > 0){ %>
+         <div class="user-message user-message--error" >
+             <ul>
+                 <% validationErrors.forEach(e => { %>
+                     <li><%= e.msg %></li>
+                 <% }); %>
+             </ul>
+         </div>
+     <% } %>
+     <form class="login-form" action="/signup" method="POST" novalidate>
+         <div class="form-control">
+             <label for="email">E-Mail</label>
+             <input 
+                class="<%= validationErrors.find(e => e.path === 'email') ? 'invalid' : '' %>" 
+                type="email" 
+                name="email" 
+                id="email" 
+                value="<%= oldInput ? oldInput.email : '' %>">
+         </div>
+         <div class="form-control">
+             <label for="password">Password</label>
+             <input
+                class="<%= validationErrors.find(e => e.path === 'password') ? 'invalid' : '' %>"  
+                type="password" 
+                name="password" 
+                id="password" 
+                value="<%= oldInput ? oldInput.password : '' %>">
+         </div>
+         <div class="form-control">
+             <label for="confirmPassword">Confirm Password</label>
+             <input 
+                class="<%= validationErrors.find(e => e.path === 'confirmPassword') ? 'invalid' : '' %>" 
+                type="password" 
+                name="confirmPassword" 
+                id="confirmPassword" 
+                value="<%= oldInput ? oldInput.confirmPassword : '' %>">
+         </div>
+         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+         <button class="btn" type="submit">Signup</button>
+     </form>
+ </main>
 <%- include('../includes/end.ejs') %>
