--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,7 +7,10 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if (errorMessage && Array.isArray(errorMessage)) { %>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% } %>
+        <!-- <% if (errorMessage && Array.isArray(errorMessage)) { %>
             <div class="user-message user-message--error">
                 <ul>
                     <% errorMessage.forEach(e => { %>
@@ -15,7 +18,7 @@
                     <% }); %>
                 </ul>
             </div>
-        <% } %>
+        <% } %> -->
         <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
             <div class="form-control">
                 <label for="title">Title</label>
