--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -7,10 +7,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if (errorMessage) { %>
-            <div class="user-message user-message--error"><%= errorMessage %></div>
-        <% } %>
-        <!-- <% if (errorMessage && Array.isArray(errorMessage)) { %>
+        <% if (errorMessage && Array.isArray(errorMessage)) { %>
             <div class="user-message user-message--error">
                 <ul>
                     <% errorMessage.forEach(e => { %>
@@ -18,8 +15,8 @@
                     <% }); %>
                 </ul>
             </div>
-        <% } %> -->
-        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <% } %>
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input 
@@ -29,7 +26,7 @@
                     id="title" 
                     value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input 
                     class="<%= validationErrors.find(e => e.path === 'imageUrl') ? 'invalid' : '' %>"
@@ -37,6 +34,13 @@
                     name="imageUrl" 
                     id="imageUrl" 
                     value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
+            </div> -->
+            <div class="form-control">
+                <label for="imageUrl">Image</label>
+                <input 
+                    type="file" 
+                    name="image" 
+                    id="image">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
